Add shared Pitcheroo design system (design.css)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Open Sans -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap">
-
+  <link rel="stylesheet" href="/design.css">
   <style>
     :root {
       --yellow: #fbce3e;
