--- a/index.html
+++ b/index.html
@@ -134,11 +134,12 @@
 
     .nav-toggle span {
       display: block;
-      height: 3px;
+      width: 100%;
+      height: 4px;
       border-radius: 999px;
-      background: #fff;
+      background: var(--yellow);
       margin: 4px 0;
-      transition: transform 0.18s ease, opacity 0.18s ease;
+      transition: transform 0.18s ease, opacity 0.18s ease, background 0.18s ease;
     }
 
     /* Mobile layout */
