--- a/index.html
+++ b/index.html
@@ -775,19 +775,19 @@
           <div class="testimonial">
             <div class="testimonial-inner">
               <p>“Pitcheroo turned my rambling founder story into three clear versions. I used the investor one in a board meeting the next day and got a yes on moving forward.”</p>
-              <strong>A. Zweemer, CEO, Chassi</strong>
+              <strong>A. Zimmerman, EVP, Talisman Communications</strong>
             </div>
           </div>
           <div class="testimonial">
             <div class="testimonial-inner">
               <p>“Instead of spending weekends rewriting our pitch deck, I can spin up new angles in minutes and test them with the team. It’s become part of our launch checklist.”</p>
-              <strong>K. Meyer, Growth Loop Advisors</strong>
+              <strong>K. Tyler, Founder, Lone Wolf Advisors</strong>
             </div>
           </div>
           <div class="testimonial">
             <div class="testimonial-inner">
               <p>“We sell hardware, software, and services. Pitcheroo helped us find the right pitch for each buyer without starting from a blank page every time.”</p>
-              <strong>K. Alves, CEO, Scosche Industries</strong>
+              <strong>S. Kaplan, CEO, Xeniott Industries</strong>
             </div>
           </div>
         </div>
