--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
           <div class="testimonial">
             <div class="testimonial-inner">
               <p>“Pitcheroo turned my rambling founder story into three clear versions. I used the investor one in a board meeting the next day and got a yes on moving forward.”</p>
-              <strong>A. Zimmerman, EVP, Talisman Communications</strong>
+              <strong>A. Zimmerman, EVP, Talisman Inc</strong>
             </div>
           </div>
           <div class="testimonial">
