--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Pitcheroo – Winning Pitches in Under a Minute</title>
+  <title>Pitcheroo – Winning Pitches in Seconds</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Turn your story into six investor-ready pitches in seconds. Pitcheroo transforms 7 key story elements into sharp, ready-to-use pitches for investors, buyers, and brands.">
 <!-- Open Graph / social share -->
