Update hero headline and meta titles

--- a/index.html
+++ b/index.html
@@ -653,9 +653,9 @@
 
   <div class="hero-content">
     <div class="hero-glass">
-      <h1>Winning pitches in under a minute.</h1>
+      <h1>Winning pitches in seconds.</h1>
       <p>
-        Turn 7 simple story beats into six sharp, investor-ready pitches in seconds.
+        Turn 7 simple story beats into six sharp, investor-ready pitches with one click.
         No deck, no blank page, no overthinking.
       </p>
       <a href="https://app.pitcheroo.ai">
