Update hero microcopy to reflect optional signup

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
         <button class="hero-cta">Generate My First 6 Pitches Free</button>
       </a>
       <div class="hero-microcopy">
-        No signup · No credit card · Keep anything you like
+        Try it free—no signup required. Sign up later to save your pitches.
       </div>
     </div>
   </div>
